# agentic_recruitment

./: .env_sample  .gitignore  .gitmodules  config.sample.toml  main.py  md_resume.py  pyproject.toml
data/: example_job_urls.json  example_master_data.json  example_personal_data.json
src/: job_description_data_extraction.py  job_description_extractor.py  json_to_pdf.py  settings.py
src/agents/: adjust_data.py  analyze_skill_gaps.py  extract_job_keywords.py  interactive_improvement.py
src/cli/: console.py
src/data/: json_file_provider.py  provider.py
src/export/: document_exporter.py  markdown_to_pdf_exporter.py
src/llm/: factory.py  gemini_provider.py  handler.py  openai_provider.py  provider.py
src/models/: experience_data.py  extraction_run.py  improvement_session.py  job_keywords.py  skill_gap.py
src/prompts/: adjust_data.txt  analyze_skill_gaps.txt  extract_job_keywords.txt  gap_question.txt  humanize_bullet.txt  job_deep_dive.txt  prompter.py  xyz_rewrite.txt
src/rendering/: jinja_renderer.py  provider.py
src/storage/: file_storage.py  local_file_storage.py  provider.py
templates/: resume_template.md.j2
tests/: conftest.py  test_job_description_data_extraction.py  test_settings.py
tests/test_agents/: test_extract_job_keywords.py
tests/test_data/: test_json_file_provider.py
tests/test_export/: test_markdown_to_pdf_exporter.py
tests/test_llm/: test_factory.py  test_gemini_provider.py  test_openai_provider.py
tests/test_models/: test_extraction_run.py  test_job_keywords.py
tests/test_rendering/: test_jinja_renderer.py
(+7 files in other folders)
