[project]
name = "agentic-recruitment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.2",
    "docling>=2.70.0",
    "google-genai>=1.60.0",
    "jinja2>=3.1.6",
    "openai>=1.82.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25"]
